meecast (0.5.6) unstable; urgency=low

  * Added Belgium, Albabnia, Andorra, Czech Republic, Hungary, Iceland, Italy to foreca.com database
  * Fixed problem with current weather for weather.com source

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 28 Mar 2011 21:42:23 +0200

meecast (0.5.5) unstable; urgency=low

  * Added stations to foreca.com database (Austria)
  * Fixed problem with negative temperature in gismeteo.ru
  * Added icon for gismeteo.ru data
  * Fixed problem with Ppcp
  * Began adding the new source bom.fov.au

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 28 Mar 2011 21:42:23 +0200

meecast (0.5.4) unstable; urgency=low

  * Added stations to foreca.com database (Poland, Ukraine, Moldova, Latvia,
    Lithuania, Estonia, Romania, Norway, Denmark, Netherlands, Greece)
  * Added stations in yr.no database (Argentina)
  * Added Villa Angela to weather.com database 
  * Fixed problem with wind direction in source gismeteo.ru
  * Added icons and descriptions for foreca.com data
  * Updated Russian and Spain translations

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 25 Mar 2011 22:42:23 +0200

meecast (0.5.3) unstable; urgency=low

  * Fixed problem with gismeteo.ru
  * Fixed problem with Current weather for weather.com
  * Added stations to foreca.com database (Bulgaria)
  * Updated Germany translation

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 17 Mar 2011 22:42:23 +0200

meecast (0.5.2) unstable; urgency=low

  * Added station Juankoski to yr.no database
  * Fixed problem with long station name in events widget
  * Updated Russian translation
  * Added new source foreca.com

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 3 Mar 2011 12:42:23 +0200

meecast (0.5.1) unstable; urgency=low

  * Fixed problem with negative temperatures in source gismeteo.ru 
  * Fixed problem with long station name in events, lockscreen and standby widget 

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 23 Feb 2011 22:42:23 +0200

meecast (0.5) unstable; urgency=low
